Java Upgrade outcome